Added Copy to Grunt for HTML files; updated configuration values

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,13 +3,13 @@
 // Include Normalize.css to standardize default browser styles
 @import '~@csstools/normalize.css';
 
-// Tools
-@import './tools/mixins';
-@import './tools/functions';
+// // Tools
+// @import './tools/mixins';
+// @import './tools/functions';
 
-// Core
-@import './core/grid';
-@import './core/typography';
-@import './core/forms';
-@import './core/button/button';
-@import './core/button/button--text';
+// // Core
+// @import './core/grid';
+// @import './core/typography';
+// @import './core/forms';
+// @import './core/button/button';
+// @import './core/button/button--text';
