--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,8 +7,8 @@
 // @import './tools/mixins';
 // @import './tools/functions';
 
-// // Core
-// @import './core/grid';
+// Core
+@import './core/grid';
 // @import './core/typography';
 // @import './core/forms';
 // @import './core/button/button';
