--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,6 @@
 // Core
 @import './core/grid';
 @import './core/typography';
-// @import './core/forms';
+@import './core/forms';
 // @import './core/button/button';
 // @import './core/button/button--text';
