--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,5 +13,4 @@
 @import './core/grid';
 @import './core/typography';
 @import './core/forms';
-// @import './core/button/button';
-// @import './core/button/button--text';
+@import './core/button';
