--- a/src/styles/core/_forms.scss
+++ b/src/styles/core/_forms.scss
@@ -92,25 +92,37 @@ option {
 // Form Styles
 // -------------------------------------
 .form__item {
-    margin: ($site-gutter / 2) 0;
+    margin: 0 0 ($site-gutter / 4);
+
+    @include bp(laptop) {
+        margin: 0 0 ($site-gutter / 2);
+    }
 }
 
 .form__label {
-    @include font-size(18);
     display: block;
     font-weight: 700;
-    margin: 0 0 10px;
+    margin: 0 0 5px;
+
+    @include bp(laptop) {
+        @include font-size(18);
+        margin: 0 0 10px;
+    }
 }
 
 .form__input,
 .form__textarea {
-    @include font-size(16);
     border-radius: 3px;
-    margin: 0 0 10px;
-    padding: 10px 15px;
+    margin: 0 0 5px;
+    padding: 6px 10px;
     width: 100%;
 
     &:focus {
         border-color: $primary-color;
+    }
+
+    @include bp(laptop) {
+        margin: 0 0 10px;
+        padding: 10px 15px;
     }
 }
