--- a/src/styles/core/_grid.scss
+++ b/src/styles/core/_grid.scss
@@ -14,14 +14,14 @@
 }
 
 html {
-  background-color: $background-color--site;
-  box-sizing: border-box;
+    background-color: $background-color--site;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 
@@ -89,7 +89,11 @@ html {
 }
 
 .page-section--header {
+    padding: ($site-gutter / 2);
 
+    @include bp(laptop) {
+        padding: ($site-gutter * 2) $site-gutter;
+    }
 }
 
 
