--- a/src/styles/core/_typography.scss
+++ b/src/styles/core/_typography.scss
@@ -108,6 +108,7 @@ dl {
 @include headings(1, 6) {
     @include font-header;
     color: $text-color;
+    margin: 0 0 10px;
 }
 
 h1,
@@ -116,6 +117,7 @@ h1,
 
     @include bp(laptop) {
         @include font-size(60);
+        margin-bottom: 20px;
     }
 }
 
