--- a/src/styles/core/_button.scss
+++ b/src/styles/core/_button.scss
@@ -25,6 +25,7 @@ button,
     border-radius: 3px;
     font-weight: 700;
     padding: 12px 20px;
+    transition: $anim;
 
     // Disabled Styles live here because they override everything
     &.btn--disabled,
@@ -39,6 +40,10 @@ button,
             color: map-get($button-color--disabled, contrast);
             border-color: transparent;
         }
+    }
+
+    & + .btn {
+        margin-left: ($site-gutter / 2);
     }
 }
 
@@ -58,15 +63,6 @@ button,
             background-color: transparent;
             border: 2px solid map-get($color-set, background);
             color: map-get($color-set, contrast);
-        }
-    }
-
-    .link--#{$color-name} {
-        color: map-get($color-set, color);
-
-        &:hover,
-        a:hover & {
-            color: darken(map-get($color-set, color), .2);
         }
     }
 }
